--- a/templates/autres_sources.html
+++ b/templates/autres_sources.html
@@ -78,6 +78,64 @@
             color: #dc3545;
             margin-bottom: 20px;
         }
+        .container1 {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            padding: 30px;
+            flex-grow: 1;
+        }
+
+        .btn1-container {
+            display: flex;
+            gap: 30px;
+            margin-top: 20px;
+            justify-content: center;
+            animation: fadeIn 1s 0.5s forwards;
+        }
+
+        .btn1 {
+            background: linear-gradient(135deg, #3498db, #2980b9);  /* Dégradé bleu vif */
+            color: white;
+            padding: 15px 35px;
+            font-size: 1.2rem;
+            font-weight: bold;
+            border: none;
+            border-radius: 50px;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+            position: relative;
+        }
+        .btn1.active 
+        {
+            background: linear-gradient(135deg, #e67e22, #d35400); /* Dégradé rouge vif */
+           transform: translateY(0); /* Supprime l'effet hover */
+          box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2); /* Augmente l'effet d'ombre */
+        }
+
+        footer {
+            background-color: #2c3e50;  /* Bleu foncé pour le pied de page */
+            color: white;
+            padding: 20px 10px;
+            margin-top: auto;
+            text-align: center;
+            box-shadow: 0 -8px 16px rgba(0, 0, 0, 0.1);
+        }
+
+        footer a {
+            color: #3498db;  /* Bleu vif pour les liens */
+            text-decoration: none;
+            font-weight: 600;
+        }
+
+        footer a:hover {
+            text-decoration: underline;
+            color: #2980b9; /* Bleu plus foncé pour les liens au survol */
+        }
+
+        
     </style>
 </head>
 <body>
@@ -94,6 +152,29 @@
             </form>
         </div>
     </div>
+    <div class="container1">
+        <div class="btn1-container">
+            <a href="/seneweb">
+                <button class="btn1">Articles Seneweb</button>
+            </a>
+            <a href="/senplus">
+                <button class="btn1">Articles Senplus</button>
+            </a>
+            <a href="/seneco">
+                <button class="btn1">Articles Seneco</button>
+            </a>
 
+            <a href="/walfadjri">
+                <button class="btn1">Articles Walfadjri</button>
+            </a>
+
+            <a href="/autres-sources">
+                <button class="btn1 active">Autres sources</button>
+            </a>
+        </div>
+    </div>
+    <footer>
+        <p>&copy; 2025 Sénégal Info. Tous droits réservés. | Politique de confidentialité | Conditions d'utilisation <a href="https://sambasy.netlify.app/">Contactez-nous</a></p>
+    </footer>
 </body>
 </html>
