--- a/templates/index.html
+++ b/templates/index.html
@@ -11,8 +11,8 @@
             font-family: 'Roboto', sans-serif;
             margin: 0;
             padding: 0;
-            background: #ffffff;  /* Blanc comme fond principal */
-            color: #003366;  /* Bleu foncé pour le texte principal */
+            background: #f4f7f6;  /* Fond léger et doux */
+            color: #2c3e50;  /* Bleu foncé pour le texte principal */
             display: flex;
             flex-direction: column;
             min-height: 100vh;
@@ -26,10 +26,10 @@
             align-items: center;
             justify-content: space-between;
             height: 50vh;
-            background: #003366;  /* Bleu foncé pour l'en-tête */
+            background: #3498db;  /* Bleu vif pour l'en-tête */
             color: white;
             padding: 40px 20px;
-            border-bottom: 6px solid #0099FF; /* Bleu clair sous l'en-tête */
+            border-bottom: 6px solid #2980b9; /* Bleu plus foncé sous l'en-tête */
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
             transition: all 0.3s ease;
         }
@@ -66,7 +66,7 @@
         p {
             font-size: 1.2rem;
             font-weight: 500;
-            color: #e5e5e5; /* Texte en gris clair pour une bonne lisibilité */
+            color: #ecf0f1; /* Texte en gris clair pour une bonne lisibilité */
         }
 
         /* Animation d'apparition */
@@ -100,7 +100,7 @@
         }
 
         .btn {
-            background: linear-gradient(135deg, #003366, #0099FF);  /* Dégradé bleu foncé et bleu clair */
+            background: linear-gradient(135deg, #3498db, #2980b9);  /* Dégradé bleu vif */
             color: white;
             padding: 15px 35px;
             font-size: 1.2rem;
@@ -114,7 +114,7 @@
         }
 
         .btn:hover {
-            background: linear-gradient(135deg, #0099FF, #003366);  /* Inverser les couleurs au survol */
+            background: linear-gradient(135deg, #2980b9, #3498db);  /* Inverser les couleurs au survol */
             transform: translateY(-5px);
             box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
         }
@@ -138,7 +138,7 @@
 
         /* Pied de page */
         footer {
-            background-color: #003366;  /* Bleu foncé pour le pied de page */
+            background-color: #2c3e50;  /* Bleu foncé pour le pied de page */
             color: white;
             padding: 20px 10px;
             margin-top: auto;
@@ -147,14 +147,14 @@
         }
 
         footer a {
-            color: #0099FF;  /* Bleu clair pour les liens */
+            color: #3498db;  /* Bleu vif pour les liens */
             text-decoration: none;
             font-weight: 600;
         }
 
         footer a:hover {
             text-decoration: underline;
-            color: #003366; /* Bleu foncé pour les liens au survol */
+            color: #2980b9; /* Bleu plus foncé pour les liens au survol */
         }
 
         /* Responsive design */
